# animal-ai-python

./: .gitignore  CODEOWNERS  LICENSE  README.md  pyproject.toml  setup.py  update_dependencies.py
.github/: labeler.yml
.github/workflows/: auto-update-publish.yml  labeler.yml  python-publish.yml  stale.yml
animalai/: __init__.py  __main__.py  actions.py  braitenberg.py  download.py  environment.py  executable.py  play.py  raycastparser.py  setup.py
animalai/LLM_scaffolds/: __init__.py  environment_scaffolds.py  example_kaggle.py  framework_wrappers.py  inspect_example.py  inspect_wrapper.py  kaggle_wrapper.py
animalai/agents/: __init__.py  braitenberg.py  randomActionAgent.py
animalai/arenas/: GoodGoal_Fixed.yml  GoodGoal_Random.yml  __init__.py
test/: README.md  braitenberg.py  randomActionAgent.py  test-environment.py  test-manual-play.py  test-raycastparser.py  test_raycastparser.py
test/configs/: sanityGreen.yml
test/core/: README.md  core-test-actions.py  core-test-environment.py  core-test-raycastparser.py
test/integration/: braitenberg.py  play.py
test/manual/: manual-play.py
test/test-Configs/: README.md  exampleArena.yml
tests/: integration-braitenberg.py  integration-play.py  play.py  test-download.py  test-environment.py  test-vectorized-environment.py  test_download.py  test_manual_play.py  test_raycastparser.py
tests/llm_scaffolds/: test_frame_by_frame_scaffold.py  test_inspect_wrapper.py
tests/test-Configs/: exampleArena.yml
