[project]
name = "animalai"
version = "6.0.0"
description = "Animal-AI Python API"
license = "MIT"
readme = "README.md"
authors = [
    { name = "Animal-AI Team", email = "kindsofintelligence.cfi@gmail.com" },
    { name = "Matt Crosby" },
    { name = "Ibrahim Alhas" },
    { name = "Konstantinos Voudouris" },
    { name = "Wout Schellaert" },
    { name = "Joel Holmes" },
    { name = "Ben Beyret" },
    { name = "Ben Slater"},
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.14",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.14"
dependencies = [
    "gym>=0.26.2",
    "kaggle-benchmarks>=0.3.0",
    "mlagents-envs-aai>=1.0.0",
    "moviepy>=2.2.1",
    "numpy",
    "protobuf>=6.31.1",
]

[project.urls]
"Website"         = "https://animalai.org/"
"Repository"      = "https://github.com/Kinds-of-Intelligence-CFI/animal-ai-python"
"Main Repository" = "https://github.com/Kinds-of-Intelligence-CFI/animal-ai"
"Releases"        = "https://https://github.com/Kinds-of-Intelligence-CFI/animal-ai/releases"
"Documentation"   = "https://github.com/Kinds-of-Intelligence-CFI/animal-ai/tree/main/docs"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed          = true
dev-dependencies = []
                               

[tool.uv]
override-dependencies = ["protobuf>=6.31.1"] 